--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
   postgres:
-    image: postgres:17
+    image: postgres:latest
     container_name: backtest_postgres
     restart: unless-stopped
     environment:
-      POSTGRES_DB: backtest_db
-      POSTGRES_USER: backtest_user
-      POSTGRES_PASSWORD: backtest_pass
+      POSTGRES_DB: chisel
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
     ports:
       - "5432:5432"
     volumes:
@@ -14,8 +14,8 @@ services:
 
   kafka:
     image: confluentinc/cp-kafka:latest
-    hostname: backtest_kafka
-    container_name: backtest_kafka
+    hostname: chisel_kafka
+    container_name: chisel_kafka
     ports:
       - "9092:9092"
       - "9093:9093"
@@ -49,7 +49,7 @@ services:
       - "8080:8080"
     environment:
       - KAFKA_CLUSTERS_0_NAME=local
-      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=backtest_kafka:9092
+      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=chisel_kafka:9092
     depends_on:
       - kafka
 
