--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
 
   kafka:
     image: confluentinc/cp-kafka:latest
-    hostname: chisel_kafka
-    container_name: chisel_kafka
+    hostname: marble_kafka
+    container_name: marble_kafka
     ports:
       - "9092:9092"
       - "9093:9093"
@@ -49,7 +49,7 @@ services:
       - "8080:8080"
     environment:
       - KAFKA_CLUSTERS_0_NAME=local
-      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=chisel_kafka:9092
+      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=marble_kafka:9092
     depends_on:
       - kafka
 
