--- a/quarry/.vscode/settings.json
+++ b/quarry/.vscode/settings.json
@@ -1,13 +1,63 @@
 {
-    "files.associations": {
-        "*.erd": "json",
-        "*.vuerd": "json",
-        "print": "cpp",
-        "ostream": "cpp",
-        "stdexcept": "cpp",
-        "string": "cpp"
-    },
-    "cSpell.words": [
-        "pqxx"
-    ],
+  "files.associations": {
+    "*.erd": "json",
+    "*.vuerd": "json",
+    "print": "cpp",
+    "ostream": "cpp",
+    "stdexcept": "cpp",
+    "string": "cpp",
+    "algorithm": "cpp",
+    "cmath": "cpp",
+    "__verbose_abort": "cpp",
+    "cstdint": "cpp",
+    "cstdio": "cpp",
+    "cstdlib": "cpp",
+    "cstring": "cpp",
+    "cwchar": "cpp",
+    "cwctype": "cpp",
+    "initializer_list": "cpp",
+    "iosfwd": "cpp",
+    "limits": "cpp",
+    "new": "cpp",
+    "string_view": "cpp",
+    "typeinfo": "cpp",
+    "__bit_reference": "cpp",
+    "__hash_table": "cpp",
+    "__locale": "cpp",
+    "__node_handle": "cpp",
+    "__split_buffer": "cpp",
+    "array": "cpp",
+    "bitset": "cpp",
+    "cctype": "cpp",
+    "clocale": "cpp",
+    "complex": "cpp",
+    "cstdarg": "cpp",
+    "ctime": "cpp",
+    "deque": "cpp",
+    "execution": "cpp",
+    "memory": "cpp",
+    "ios": "cpp",
+    "istream": "cpp",
+    "locale": "cpp",
+    "mutex": "cpp",
+    "optional": "cpp",
+    "queue": "cpp",
+    "ratio": "cpp",
+    "sstream": "cpp",
+    "stack": "cpp",
+    "streambuf": "cpp",
+    "unordered_map": "cpp",
+    "variant": "cpp",
+    "vector": "cpp",
+    "map": "cpp",
+    "span": "cpp",
+    "pqxx": "cpp",
+    "iostream": "cpp",
+    "source_location": "cpp"
+  },
+  "cSpell.words": [
+    "pqxx"
+  ],
+  "editor.formatOnSave": true,
+  "editor.tabSize": 2
 }
