tests pass, cpp implementation fils

--- a/quarry/CMakeLists.txt
+++ b/quarry/CMakeLists.txt
@@ -5,59 +5,74 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_BUILD_TYPE Debug)
 
+# Dependencies
 find_package(PostgreSQL REQUIRED)
 find_package(PkgConfig REQUIRED)
 find_package(Catch2 3 REQUIRED)
 find_package(Boost CONFIG)
 pkg_check_modules(PQXX REQUIRED libpqxx)
 
+# Include directories
 include_directories(${PROJECT_SOURCE_DIR}/include)
 include_directories(${PROJECT_SOURCE_DIR}/include/migration)
 
-# specifying each sources, explicitly
-# idk why but globbing can be bad
+# === Source grouping ===
 
-
-file(GLOB_RECURSE SOURCES
-    ${PROJECT_SOURCE_DIR}/include/**/*.h
-    ${PROJECT_SOURCE_DIR}/src/**/*.cpp
+# Common sources (shared between executables)
+file(GLOB_RECURSE COMMON_SOURCES
+    ${PROJECT_SOURCE_DIR}/src/api/*.cpp
+    ${PROJECT_SOURCE_DIR}/src/migration/*.cpp
 )
 
-add_executable(quarry_main ${SOURCES})
+# quarry_main (main app)
+set(QUARRY_MAIN_SOURCES
+    ${PROJECT_SOURCE_DIR}/src/main.cpp
+    ${COMMON_SOURCES}
+)
 
-# 1. Locate header files
-# 2. Locate binaries
-# 3. Specify these binaries need to be linked to this executable
+# quarry_bootstrap (initial migration setup)
+set(QUARRY_BOOTSTRAP_SOURCES
+    ${PROJECT_SOURCE_DIR}/src/bootstrap.cpp
+    ${COMMON_SOURCES}
+)
 
+# === Executable: quarry_main ===
+add_executable(quarry_main ${QUARRY_MAIN_SOURCES})
 
-target_include_directories(quarry_main PRIVATE ${Boost_INCLUDE_DIRS})
-
-# 1.
-# links header files (fixes the include linter errors)
-target_include_directories(quarry_main PUBLIC
+target_include_directories(quarry_main PRIVATE
     ${PROJECT_SOURCE_DIR}/include
     ${PQXX_INCLUDE_DIRS}
+    ${Boost_INCLUDE_DIRS}
 )
 
-# 2.
-# .dylib or .a (the compiled binaries)
 target_link_directories(quarry_main PRIVATE
-${PQXX_LIBRARY_DIRS}
+    ${PQXX_LIBRARY_DIRS}
 )
 
-# 3.
-# links my executable to the actual libraries
 target_link_libraries(quarry_main
-${PostgreSQL_LIBRARIES}
-${PQXX_LIBRARIES}
+    ${PostgreSQL_LIBRARIES}
+    ${PQXX_LIBRARIES}
 )
 
+# === Executable: quarry_bootstrap ===
+add_executable(quarry_bootstrap ${QUARRY_BOOTSTRAP_SOURCES})
 
+target_include_directories(quarry_bootstrap PRIVATE
+    ${PROJECT_SOURCE_DIR}/include
+    ${PQXX_INCLUDE_DIRS}
+    ${Boost_INCLUDE_DIRS}
+)
 
-# testing information
-# TODO move this to a root cmakelists when I start on the engine
-# TODO Also look into cmakepresets.json
+target_link_directories(quarry_bootstrap PRIVATE
+    ${PQXX_LIBRARY_DIRS}
+)
 
+target_link_libraries(quarry_bootstrap
+    ${PostgreSQL_LIBRARIES}
+    ${PQXX_LIBRARIES}
+)
+
+# === Testing ===
 enable_testing()
 
 file(GLOB TEST_SOURCES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/tests/test_*.cpp)
@@ -65,9 +80,10 @@ file(GLOB TEST_SOURCES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/tests/test_*.cpp)
 foreach(TEST_SRC ${TEST_SOURCES})
     get_filename_component(TEST_NAME ${TEST_SRC} NAME_WE)
 
-    add_executable(${TEST_NAME} ${TEST_SRC})
+    add_executable(${TEST_NAME} ${TEST_SRC} ${COMMON_SOURCES})
 
     target_include_directories(${TEST_NAME} PRIVATE
+        ${PROJECT_SOURCE_DIR}/include
         ${PROJECT_SOURCE_DIR}/include/api
         ${PROJECT_SOURCE_DIR}/include/migration
         ${PQXX_INCLUDE_DIRS}
@@ -83,4 +99,3 @@ foreach(TEST_SRC ${TEST_SOURCES})
 
     add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
 endforeach()
-
