--- a/quarry/.vscode/settings.json
+++ b/quarry/.vscode/settings.json
@@ -62,7 +62,56 @@
     "iterator": "cpp",
     "regex": "cpp",
     "__config": "cpp",
-    "unordered_set": "cpp"
+    "unordered_set": "cpp",
+    "any": "cpp",
+    "barrier": "cpp",
+    "cfenv": "cpp",
+    "charconv": "cpp",
+    "cinttypes": "cpp",
+    "codecvt": "cpp",
+    "condition_variable": "cpp",
+    "csetjmp": "cpp",
+    "csignal": "cpp",
+    "cuchar": "cpp",
+    "fstream": "cpp",
+    "future": "cpp",
+    "iomanip": "cpp",
+    "latch": "cpp",
+    "numbers": "cpp",
+    "scoped_allocator": "cpp",
+    "semaphore": "cpp",
+    "set": "cpp",
+    "shared_mutex": "cpp",
+    "strstream": "cpp",
+    "syncstream": "cpp",
+    "typeindex": "cpp",
+    "valarray": "cpp",
+    "atomic": "cpp",
+    "bit": "cpp",
+    "chrono": "cpp",
+    "compare": "cpp",
+    "concepts": "cpp",
+    "coroutine": "cpp",
+    "exception": "cpp",
+    "expected": "cpp",
+    "functional": "cpp",
+    "memory_resource": "cpp",
+    "numeric": "cpp",
+    "random": "cpp",
+    "system_error": "cpp",
+    "type_traits": "cpp",
+    "utility": "cpp",
+    "flat_map": "cpp",
+    "flat_set": "cpp",
+    "format": "cpp",
+    "generator": "cpp",
+    "ranges": "cpp",
+    "spanstream": "cpp",
+    "stacktrace": "cpp",
+    "stdfloat": "cpp",
+    "stop_token": "cpp",
+    "text_encoding": "cpp",
+    "thread": "cpp"
   },
   "cSpell.words": [
     "pqxx"
