Endpoints, PolygonAPI, and pre-setup for https (#10)
This commit introduces the following changes:
- Utils file
- Endpoint struct
- Polygon class
- QOL improvements

--- a/quarry/CMakeLists.txt
+++ b/quarry/CMakeLists.txt
@@ -1,4 +1,6 @@
-cmake_minimum_required(VERSION 3.4...3.18)
+cmake_minimum_required(VERSION 3.29)
+cmake_policy(SET CMP0167 OLD)
+
 project(quarry LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 23)
@@ -9,12 +11,14 @@ set(CMAKE_BUILD_TYPE Debug)
 find_package(PostgreSQL REQUIRED)
 find_package(PkgConfig REQUIRED)
 find_package(Catch2 3 REQUIRED)
-find_package(Boost CONFIG)
+find_package(Boost REQUIRED
+             COMPONENTS system headers)
 pkg_check_modules(PQXX REQUIRED libpqxx)
 
 # Include directories
 include_directories(${PROJECT_SOURCE_DIR}/include)
 include_directories(${PROJECT_SOURCE_DIR}/include/migration)
+include_directories(${PROJECT_SOURCE_DIR}/include/api)
 
 # === Source grouping ===
 
@@ -86,6 +90,7 @@ foreach(TEST_SRC ${TEST_SOURCES})
         ${PROJECT_SOURCE_DIR}/include
         ${PROJECT_SOURCE_DIR}/include/api
         ${PROJECT_SOURCE_DIR}/include/migration
+        ${PROJECT_SOURCE_DIR}/include/api/endpoints
         ${PQXX_INCLUDE_DIRS}
     )
 
