--- a/quarry/CMakeLists.txt
+++ b/quarry/CMakeLists.txt
@@ -1,111 +1,107 @@
 cmake_minimum_required(VERSION 3.29)
-cmake_policy(SET CMP0167 OLD)
 
-project(quarry LANGUAGES CXX)
+set(QUARRY_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
-set(CMAKE_CXX_STANDARD 23)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_BUILD_TYPE Debug)
+# ---- Dependencies ----
 
-# Dependencies
 find_package(PostgreSQL REQUIRED)
-find_package(PkgConfig REQUIRED)
-find_package(Catch2 3 REQUIRED)
-find_package(Boost REQUIRED
-             COMPONENTS system headers)
-pkg_check_modules(PQXX REQUIRED libpqxx)
-find_package(OpenSSL REQUIRED)
+find_package(OpenSSL REQUIRED COMPONENTS SSL Crypto)
+find_package(Threads REQUIRED)
 
 
-# Include directories
-include_directories(${PROJECT_SOURCE_DIR}/include)
-include_directories(${PROJECT_SOURCE_DIR}/include/migration)
-include_directories(${PROJECT_SOURCE_DIR}/include/api)
+set(_boost_components system)
+find_package(Boost 1.82 CONFIG QUIET COMPONENTS ${_boost_components})
+if(NOT Boost_FOUND)
+  cmake_policy(SET CMP0167 OLD)
+  find_package(Boost REQUIRED COMPONENTS ${_boost_components})
+  set(QUARRY_BOOST_USE_IMPORT_TARGETS OFF)
+else()
+  set(QUARRY_BOOST_USE_IMPORT_TARGETS ON)
+endif()
 
-# === Source grouping ===
+find_package(unofficial-libpqxx CONFIG QUIET)
+set(HAVE_UNOFFICIAL_LIBPQXX ${unofficial-libpqxx_FOUND})
 
-# Common sources (shared between executables)
-file(GLOB_RECURSE COMMON_SOURCES
-    ${PROJECT_SOURCE_DIR}/src/api/*.cpp
-    ${PROJECT_SOURCE_DIR}/src/migration/*.cpp
+if(NOT HAVE_UNOFFICIAL_LIBPQXX)
+  find_package(PkgConfig REQUIRED)
+  pkg_check_modules(PQXX IMPORTED_TARGET REQUIRED libpqxx)
+endif()
+
+# ---- Targets & sources ----
+file(GLOB_RECURSE QUARRY_API_SOURCES       CONFIGURE_DEPENDS "${QUARRY_DIR}/src/api/*.cpp")
+file(GLOB_RECURSE QUARRY_MIGRATION_SOURCES CONFIGURE_DEPENDS "${QUARRY_DIR}/src/migration/*.cpp" )
+
+add_library(quarry_core STATIC
+  ${QUARRY_API_SOURCES}
+  ${QUARRY_MIGRATION_SOURCES}
 )
 
-# quarry_main (main app)
-set(QUARRY_MAIN_SOURCES
-    ${PROJECT_SOURCE_DIR}/src/main.cpp
-    ${COMMON_SOURCES}
+target_include_directories(quarry_core
+  PUBLIC
+    "${QUARRY_DIR}/include"
+    "${QUARRY_DIR}/include/migration"
+    "${QUARRY_DIR}/include/api"
+    "${QUARRY_DIR}/include/api/endpoints"
 )
 
-# quarry_bootstrap (initial migration setup)
-set(QUARRY_BOOTSTRAP_SOURCES
-    ${PROJECT_SOURCE_DIR}/src/bootstrap.cpp
-    ${COMMON_SOURCES}
-)
-
-# === Executable: quarry_main ===
-add_executable(quarry_main ${QUARRY_MAIN_SOURCES})
-
-target_include_directories(quarry_main PRIVATE
-    ${PROJECT_SOURCE_DIR}/include
-    ${PQXX_INCLUDE_DIRS}
-    ${Boost_INCLUDE_DIRS}
-)
-
-target_link_directories(quarry_main PRIVATE
-    ${PQXX_LIBRARY_DIRS}
-)
-
-target_link_libraries(quarry_main
-    ${PostgreSQL_LIBRARIES}
-    ${PQXX_LIBRARIES}
+# linking core to previously imported targets
+target_link_libraries(quarry_core
+  PUBLIC
+    PostgreSQL::PostgreSQL
     OpenSSL::SSL
+    OpenSSL::Crypto
+    Threads::Threads
 )
 
-# === Executable: quarry_bootstrap ===
-add_executable(quarry_bootstrap ${QUARRY_BOOTSTRAP_SOURCES})
+if(QUARRY_BOOST_USE_IMPORT_TARGETS)
+  target_link_libraries(quarry_core PUBLIC Boost::headers Boost::system)
+else()
+  # Legacy FindBoost variables
+  target_include_directories(quarry_core PUBLIC ${Boost_INCLUDE_DIRS})
+  target_link_libraries(quarry_core PUBLIC ${Boost_LIBRARIES})
+endif()
 
-target_include_directories(quarry_bootstrap PRIVATE
-    ${PROJECT_SOURCE_DIR}/include
-    ${PQXX_INCLUDE_DIRS}
-    ${Boost_INCLUDE_DIRS}
-)
+if(HAVE_UNOFFICIAL_LIBPQXX)
+  target_link_libraries(quarry_core PUBLIC unofficial::libpqxx::pqxx)
+else()
+  target_link_libraries(quarry_core PUBLIC PkgConfig::PQXX)
+endif()
 
-target_link_directories(quarry_bootstrap PRIVATE
-    ${PQXX_LIBRARY_DIRS}
-)
+target_link_libraries(quarry_core INTERFACE marble_warnings)
 
-target_link_libraries(quarry_bootstrap
-    ${PostgreSQL_LIBRARIES}
-    ${PQXX_LIBRARIES}
-    OpenSSL::SSL
-)
+# ---- Executables ----
+add_executable(quarry_main "${QUARRY_DIR}/src/main.cpp")
+target_link_libraries(quarry_main PRIVATE quarry_core marble_warnings)
 
-# === Testing ===
-enable_testing()
+add_executable(quarry_bootstrap "${QUARRY_DIR}/src/bootstrap.cpp")
+target_link_libraries(quarry_bootstrap PRIVATE quarry_core marble_warnings)
 
-file(GLOB TEST_SOURCES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/tests/test_*.cpp)
 
-foreach(TEST_SRC ${TEST_SOURCES})
-    get_filename_component(TEST_NAME ${TEST_SRC} NAME_WE)
+# -Wl,-ld_classic for https://stackoverflow.com/a/77190575/20313250
+if(APPLE)
+  target_link_options(quarry_core PRIVATE "-Wl,-ld_classic")
+  target_link_options(quarry_main PRIVATE "-Wl,-ld_classic")
+  target_link_options(quarry_bootstrap PRIVATE "-Wl,-ld_classic")
+endif()
 
-    add_executable(${TEST_NAME} ${TEST_SRC} ${COMMON_SOURCES})
+# ---- Tests ----
+if(BUILD_TESTING)
+  file(GLOB TEST_SOURCES CONFIGURE_DEPENDS "${QUARRY_DIR}/tests/test_*.cpp")
 
-    target_include_directories(${TEST_NAME} PRIVATE
-        ${PROJECT_SOURCE_DIR}/include
-        ${PROJECT_SOURCE_DIR}/include/api
-        ${PROJECT_SOURCE_DIR}/include/migration
-        ${PROJECT_SOURCE_DIR}/include/api/endpoints
-        ${PQXX_INCLUDE_DIRS}
-    )
+  foreach(TEST_SRC IN LISTS TEST_SOURCES)
+    get_filename_component(TEST_NAME "${TEST_SRC}" NAME_WE)
 
-    target_link_directories(${TEST_NAME} PRIVATE ${PQXX_LIBRARY_DIRS})
-
+    add_executable(${TEST_NAME} "${TEST_SRC}")
     target_link_libraries(${TEST_NAME}
+      PRIVATE
+        quarry_core
         Catch2::Catch2WithMain
-        ${PostgreSQL_LIBRARIES}
-        ${PQXX_LIBRARIES}
-        OpenSSL::SSL
+        marble_warnings
     )
 
-    add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
-endforeach()
+    catch_discover_tests(${TEST_NAME}
+      TEST_PREFIX "[quarry] "
+      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+    )
+  endforeach()
+endif()
