EP builder and response (#16)
Aggregate now follows docs and builder architecture
Responses properly handled

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,6 +84,14 @@
     "valarray": "cpp",
     "variant": "cpp",
     "vector": "cpp",
-    "algorithm": "cpp"
+    "algorithm": "cpp",
+    "iterator": "cpp",
+    "type_traits": "cpp",
+    "__assert": "cpp",
+    "__assertion_handler": "cpp",
+    "system_error": "cpp",
+    "__availability": "cpp",
+    "__config": "cpp",
+    "format": "cpp"
   }
 }
