--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -93,5 +93,6 @@
     "__availability": "cpp",
     "__config": "cpp",
     "format": "cpp"
-  }
+  },
+  "C_Cpp.intelliSenseEngine": "disabled",
 }
