--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,97 +1,13 @@
 {
   "cmake.sourceDirectory": "${workspaceFolder}",
-  "files.associations": {
-    "*.erd": "json",
-    "*.vuerd": "json",
-    "memory": "cpp",
-    "string": "cpp",
-    "__bit_reference": "cpp",
-    "__hash_table": "cpp",
-    "__locale": "cpp",
-    "__node_handle": "cpp",
-    "__split_buffer": "cpp",
-    "__threading_support": "cpp",
-    "__tree": "cpp",
-    "__verbose_abort": "cpp",
-    "any": "cpp",
-    "array": "cpp",
-    "barrier": "cpp",
-    "bitset": "cpp",
-    "cctype": "cpp",
-    "cfenv": "cpp",
-    "charconv": "cpp",
-    "cinttypes": "cpp",
-    "clocale": "cpp",
-    "cmath": "cpp",
-    "codecvt": "cpp",
-    "complex": "cpp",
-    "condition_variable": "cpp",
-    "csetjmp": "cpp",
-    "csignal": "cpp",
-    "cstdarg": "cpp",
-    "cstddef": "cpp",
-    "cstdint": "cpp",
-    "cstdio": "cpp",
-    "cstdlib": "cpp",
-    "cstring": "cpp",
-    "ctime": "cpp",
-    "cuchar": "cpp",
-    "cwchar": "cpp",
-    "cwctype": "cpp",
-    "deque": "cpp",
-    "execution": "cpp",
-    "forward_list": "cpp",
-    "fstream": "cpp",
-    "future": "cpp",
-    "initializer_list": "cpp",
-    "iomanip": "cpp",
-    "ios": "cpp",
-    "iosfwd": "cpp",
-    "iostream": "cpp",
-    "istream": "cpp",
-    "latch": "cpp",
-    "limits": "cpp",
-    "list": "cpp",
-    "locale": "cpp",
-    "map": "cpp",
-    "mutex": "cpp",
-    "new": "cpp",
-    "numbers": "cpp",
-    "optional": "cpp",
-    "ostream": "cpp",
-    "print": "cpp",
-    "queue": "cpp",
-    "ratio": "cpp",
-    "regex": "cpp",
-    "scoped_allocator": "cpp",
-    "semaphore": "cpp",
-    "set": "cpp",
-    "shared_mutex": "cpp",
-    "source_location": "cpp",
-    "span": "cpp",
-    "sstream": "cpp",
-    "stack": "cpp",
-    "stdexcept": "cpp",
-    "streambuf": "cpp",
-    "string_view": "cpp",
-    "strstream": "cpp",
-    "syncstream": "cpp",
-    "tuple": "cpp",
-    "typeindex": "cpp",
-    "typeinfo": "cpp",
-    "unordered_map": "cpp",
-    "unordered_set": "cpp",
-    "valarray": "cpp",
-    "variant": "cpp",
-    "vector": "cpp",
-    "algorithm": "cpp",
-    "iterator": "cpp",
-    "type_traits": "cpp",
-    "__assert": "cpp",
-    "__assertion_handler": "cpp",
-    "system_error": "cpp",
-    "__availability": "cpp",
-    "__config": "cpp",
-    "format": "cpp"
-  }
+  "cmake.configureOnOpen": true,
+  "cmake.buildDirectory": "${workspaceFolder}/build",
+  "cmake.useCMakePresets": "always",
+  "cmake.ctest.allowParallelJobs": true,
+  "cmake.buildBeforeRun": true,
+  "cmake.ctest.testExplorerIntegrationEnabled": true,
+  "C_Cpp.intelliSenseEngine": "disabled",
+  "cSpell.words": [
+    "aggs"
+  ],
 }
