--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,6 @@ services:
     volumes:
       - ./config/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./config/nginx/ssl:/etc/nginx/ssl:ro
-    healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:80/health" ]
-      interval: 5s
-      timeout: 3s
-      retries: 3
 
   postgres:
     image: postgres:latest
@@ -25,7 +20,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql
 
   kafka:
     image: confluentinc/cp-kafka:latest
