--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,6 +63,17 @@ services:
     depends_on:
       - kafka
 
+  envoy:
+    image: envoyproxy/envoy:v1.28-latest
+    container_name: marble_envoy
+    ports:
+      - "8081:8081"
+      - "9901:9901"
+    volumes:
+      - ./gallery/envoy.yaml:/etc/envoy/envoy.yaml:ro
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+
 volumes:
   pgdata:
   kafkadata:
