exlcude on searchs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,9 +7,10 @@
   "cmake.buildBeforeRun": true,
   "cmake.ctest.testExplorerIntegrationEnabled": true,
   "C_Cpp.intelliSenseEngine": "disabled",
-  "cSpell.words": [
-    "aggs"
-  ],
   // enable for windows, clangd doesnt work correctly with msvc
-  // "C_Cpp.intelliSenseEngine": "default"
+  // "C_Cpp.intelliSenseEngine": "default",
+      "search.exclude": {
+        "build**": true,
+        "external**": true
+    }
 }
