--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,9 +8,9 @@
   "cmake.ctest.testExplorerIntegrationEnabled": true,
   "C_Cpp.intelliSenseEngine": "disabled",
   // enable for windows, clangd doesnt work correctly with msvc
-  "C_Cpp.intelliSenseEngine": "default",
-      "search.exclude": {
-        "build**": true,
-        "external**": true
-    }
+  // "C_Cpp.intelliSenseEngine": "default"
+  "search.exclude": {
+    "build**": true,
+    "external**": true
+  }
 }
