no discards, constexpr strings, std::expected fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,7 @@
   "search.exclude": {
     "build**": true,
     "external**": true,
-    "var/**": true,
+    "/var/**": true,
     ".git/": true
   }
 }
